--- a/Creating & Visualizing DataFrames.ipynb
+++ b/Creating & Visualizing DataFrames.ipynb
@@ -219,18 +219,115 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Creating DataFrame"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a list of dictionaries with new data\n",
+    "avocados_list = [\n",
+    "    {'date': \"2019-11-03\", 'small_sold': 10376832, 'large_sold': 7835071},\n",
+    "    {'date': \"2019-11-10\", 'small_sold': 10717154, 'large_sold': 8561348},\n",
+    "]\n",
+    "\n",
+    "# Convert list into DataFrame\n",
+    "avocados_2019 = pd.DataFrame(avocados_list)\n",
+    "\n",
+    "# Print the new DataFrame\n",
+    "print(avocados_2019)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# or"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a dictionary of lists with new data\n",
+    "avocados_dict = {\n",
+    "  \"date\": [\"2019-11-17\",\"2019-12-01\"],\n",
+    "  \"small_sold\": [10859987,9291631],\n",
+    "  \"large_sold\": [7674135,6238096]\n",
+    "}\n",
+    "\n",
+    "# Convert dictionary into DataFrame\n",
+    "avocados_2019 = pd.DataFrame(avocados_dict)\n",
+    "\n",
+    "# Print the new DataFrame\n",
+    "print(avocados_2019)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## R/W CSV Files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read CSV as DataFrame called airline_bumping\n",
+    "airline_bumping = pd.read_csv(\"airline_bumping.csv\")\n",
+    "\n",
+    "# Take a look at the DataFrame\n",
+    "print(airline_bumping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read CSV as DataFrame called airline_bumping\n",
+    "airline_bumping = pd.read_csv(\"airline_bumping.csv\")\n",
+    "\n",
+    "# Take a look at the DataFrame\n",
+    "print(airline_bumping.head())\n",
+    "\n",
+    "# For each airline, select nb_bumped and total_passengers and sum\n",
+    "airline_totals = airline_bumping.groupby('airline')[['nb_bumped','total_passengers']].sum()\n",
+    "\n",
+    "# Create new col, bumps_per_10k: no. of bumps per 10k passengers for each airline\n",
+    "airline_totals[\"bumps_per_10k\"] = airline_totals['nb_bumped'] /(airline_totals['total_passengers']) * 10000\n",
+    "\n",
+    "# Print airline_totals\n",
+    "print(airline_totals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create airline_totals_sorted\n",
+    "airline_totals_sorted = airline_totals.sort_values('bumps_per_10k',ascending= False)\n",
+    "\n",
+    "# Print airline_totals_sorted\n",
+    "print(airline_totals_sorted)\n",
+    "\n",
+    "# Save as airline_totals_sorted.csv\n",
+    "airline_totals_sorted.to_csv(\"airline_totals_sorted.csv\")"
+   ]
   }
  ],
  "metadata": {
