--- a/Merging DataFrames with Pandas/Concatenating Data.ipynb
+++ b/Merging DataFrames with Pandas/Concatenating Data.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Append"
+    "# Concatinating Series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## append()"
    ]
   },
   {
@@ -51,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Concat"
+    "## concat()"
    ]
   },
   {
@@ -76,18 +83,74 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Concatinating DataFrames"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Add 'year' column to names_1881 and names_1981\n",
+    "names_1881['year'] = 1881\n",
+    "names_1981['year'] = 1981\n",
+    "\n",
+    "# Append names_1981 after names_1881 with ignore_index=True: combined_names\n",
+    "combined_names = names_1881.append(names_1981, ignore_index=True)\n",
+    "\n",
+    "# Print shapes of names_1981, names_1881, and combined_names\n",
+    "print(names_1981.shape)\n",
+    "print(names_1881.shape)\n",
+    "print(combined_names.shape)\n",
+    "\n",
+    "# Print all rows that contain the name 'Morgan'\n",
+    "print(combined_names.loc[combined_names.name  == 'Morgan'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a list of weather_max and weather_mean\n",
+    "weather_list = [weather_max,weather_mean]\n",
+    "\n",
+    "# Concatenate weather_list horizontally\n",
+    "weather = pd.concat(weather_list,axis = 1)\n",
+    "# Print weather\n",
+    "print(weather)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Initialize an empyy list: medals\n",
+    "medals =[]\n",
+    "\n",
+    "for medal in medal_types:\n",
+    "    # Create the file name: file_name\n",
+    "    file_name = \"%s_top5.csv\" % medal\n",
+    "    # Create list of column names: columns\n",
+    "    columns = ['Country', medal]\n",
+    "    # Read file_name into a DataFrame: medal_df\n",
+    "    medal_df = pd.read_csv(file_name, header=0, index_col='Country', names=columns)\n",
+    "    # Append medal_df to medals\n",
+    "    medals.append(medal_df)\n",
+    "\n",
+    "# Concatenate medals horizontally: medals_df\n",
+    "medals_df = pd.concat(medals, axis='columns', sort=True)\n",
+    "\n",
+    "# Print medals_df\n",
+    "print(medals_df)"
+   ]
   },
   {
    "cell_type": "code",
