Concatenation Keys & Multi-Indexes

--- a/Merging DataFrames with Pandas/Concatenating Data.ipynb
+++ b/Merging DataFrames with Pandas/Concatenating Data.ipynb
@@ -153,6 +153,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Concatination Keys & Multi-Indexes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for medal in medal_types:\n",
+    "\n",
+    "    file_name = \"%s_top5.csv\" % medal\n",
+    "    \n",
+    "    # Read file_name into a DataFrame: medal_df\n",
+    "    medal_df = pd.read_csv(file_name, index_col='Country')\n",
+    "    \n",
+    "    # Append medal_df to medals\n",
+    "    medals.append(medal_df)\n",
+    "    \n",
+    "# Concatenate medals: medals\n",
+    "medals = pd.concat(medals, keys=['bronze', 'silver', 'gold'])\n",
+    "\n",
+    "# Print medals in entirety\n",
+    "print(medals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort the entries of medals: medals_sorted\n",
+    "medals_sorted = medals.sort_index(level=0)\n",
+    "\n",
+    "# Print the number of Bronze medals won by Germany\n",
+    "print(medals_sorted.loc[('bronze','Germany')])\n",
+    "\n",
+    "# Print data about silver medals\n",
+    "print(medals_sorted.loc['silver'])\n",
+    "\n",
+    "# Create alias for pd.IndexSlice: idx\n",
+    "idx = pd.IndexSlice\n",
+    "\n",
+    "# Print all the data on medals won by the United Kingdom\n",
+    "print(medals_sorted.loc[idx[:,'United Kingdom'], :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concatenate dataframes: february\n",
+    "february = pd.concat(dataframes, keys=['Hardware', 'Software', 'Service'],axis = 'columns')\n",
+    "\n",
+    "# Print february.info()\n",
+    "print(february.info())\n",
+    "\n",
+    "# Assign pd.IndexSlice: idx\n",
+    "idx = pd.IndexSlice\n",
+    "\n",
+    "# Create the slice: slice_2_8\n",
+    "slice_2_8 = february.loc['2015-02-02':'2015-02-08', idx[:, 'Company']]\n",
+    "\n",
+    "# Print slice_2_8\n",
+    "print(slice_2_8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make the list of tuples: month_list\n",
+    "month_list = [('january', jan),('february', feb),('march', mar)]\n",
+    "\n",
+    "# Create an empty dictionary: month_dict\n",
+    "month_dict = {}\n",
+    "\n",
+    "for month_name, month_data in month_list:\n",
+    "\n",
+    "    # Group month_data: month_dict[month_name]\n",
+    "    month_dict[month_name] = month_data.groupby('Company').sum()\n",
+    "\n",
+    "# Concatenate data in month_dict: sales\n",
+    "sales = pd.concat(month_dict)\n",
+    "\n",
+    "# Print sales\n",
+    "print(sales)\n",
+    "\n",
+    "# Print all sales by Mediacore\n",
+    "idx = pd.IndexSlice\n",
+    "print(sales.loc[idx[:, 'Mediacore'], :])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
