--- a/Merging DataFrames with Pandas/Merging DataFrames.ipynb
+++ b/Merging DataFrames with Pandas/Merging DataFrames.ipynb
@@ -167,18 +167,79 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Orderd Merge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## merge_ordered()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Perform the first ordered merge: tx_weather\n",
+    "tx_weather = pd.merge_ordered(austin, houston)\n",
+    "\n",
+    "# Print tx_weather\n",
+    "print(tx_weather)\n",
+    "\n",
+    "# Perform the second ordered merge: tx_weather_suff\n",
+    "tx_weather_suff = pd.merge_ordered(austin, houston,on='date',suffixes=['_aus','_hus'])\n",
+    "\n",
+    "# Print tx_weather_suff\n",
+    "print(tx_weather_suff)\n",
+    "\n",
+    "# Perform the third ordered merge: tx_weather_ffill\n",
+    "tx_weather_ffill = pd.merge_ordered(austin, houston,on='date',suffixes=['_aus','_hus'],fill_method='ffill')\n",
+    "\n",
+    "# Print tx_weather_ffill\n",
+    "print(tx_weather_ffill)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## merge_asof()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similar to pd.merge_ordered(), the pd.merge_asof() function will also merge values in order using the on column, but for each row in the left DataFrame, only rows from the right DataFrame whose 'on' column values are less than the left value will be kept."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge auto and oil: merged\n",
+    "merged = pd.merge_asof(auto,oil,left_on='yr',right_on='Date')\n",
+    "\n",
+    "# Print the tail of merged\n",
+    "print(merged.tail())\n",
+    "\n",
+    "# Resample merged: yearly\n",
+    "yearly = merged.resample('A', on='Date')[['mpg','Price']].mean()\n",
+    "\n",
+    "# Print yearly\n",
+    "print(yearly)\n",
+    "\n",
+    "# print yearly.corr()\n",
+    "print(yearly.corr())"
+   ]
   }
  ],
  "metadata": {
