Plotting time-series final

--- a/Intro to Data Visualization with matplotlib/Plotting time-series.ipynb
+++ b/Intro to Data Visualization with matplotlib/Plotting time-series.ipynb
@@ -108,18 +108,198 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Plotting two variables\n",
+    "If you want to plot two time-series variables that were recorded at the same times, you can add both of them to the same subplot.\n",
+    "\n",
+    "If the variables have very different scales, you'll want to make sure that you plot them in different twin Axes objects. These objects can share one axis (for example, the time, or x-axis) while not sharing the other (the y-axis).\n",
+    "\n",
+    "To create a twin Axes object that shares the x-axis, we use the twinx method.\n",
+    "\n",
+    "In this exercise, you'll have access to a DataFrame that has the climate_change data loaded into it. This DataFrame was loaded with the \"date\" column set as a DateTimeIndex, and it has a column called \"co2\" with carbon dioxide measurements and a column called \"relative_temp\" with temperature measurements.\n",
+    "\n",
+    "Use plt.subplots to create a Figure and Axes objects called fig and ax, respectively.\n",
+    "Plot the carbon dioxide variable in blue using the Axes plot method.\n",
+    "Use the Axes twinx method to create a twin Axes that shares the x-axis.\n",
+    "Plot the relative temperature variable in the twin Axes using its plot method."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Initalize a Figure and Axes\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plot the CO2 variable in blue\n",
+    "ax.plot(climate_change.index, climate_change['co2'], color='blue')\n",
+    "\n",
+    "# Create a twin Axes that shares the x-axis\n",
+    "ax2 = ax.twinx()\n",
+    "\n",
+    "# Plot the relative temperature in red\n",
+    "ax2.plot(climate_change.index, climate_change[\"relative_temp\"],color='red')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining a function that plots time-series data\n",
+    "Once you realize that a particular section of code that you have written is useful, it is a good idea to define a function that saves that section of code for you, rather than copying it to other parts of your program where you would like to use this code.\n",
+    "\n",
+    "Here, we will define a function that takes inputs such as a time variable and some other variable and plots them as x and y inputs. Then, it sets the labels on the x- and y-axis and sets the colors of the y-axis label, the y-axis ticks and the tick labels.\n",
+    "\n",
+    "Define a function called plot_timeseries that takes as input an Axes object (axes), data (x,y), a string with the name of a color and strings for x- and y-axis labels.\n",
+    "Plot y as a function of in the color provided as the input color.\n",
+    "Set the x- and y-axis labels using the provided input xlabel and ylabel, setting the y-axis label color using color.\n",
+    "Set the y-axis tick parameters using the tick_params method of the Axes object, setting the colors key-word to color."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function called plot_timeseries\n",
+    "def plot_timeseries(axes, x, y, color, xlabel, ylabel):\n",
+    "\n",
+    "  # Plot the inputs x,y in the provided color\n",
+    "  axes.plot(x, y, color=color)\n",
+    "\n",
+    "  # Set the x-axis label\n",
+    "  axes.set_xlabel(xlabel)\n",
+    "\n",
+    "  # Set the y-axis label\n",
+    "  axes.set_ylabel(ylabel, color=color)\n",
+    "\n",
+    "  # Set the colors tick params for y-axis\n",
+    "  axes.tick_params('y', colors=color)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using a plotting function\n",
+    "Defining functions allows us to reuse the same code without having to repeat all of it. Programmers sometimes say \"Don't repeat yourself\".\n",
+    "\n",
+    "In the previous exercise, you defined a function called plot_timeseries:\n",
+    "\n",
+    "plot_timeseries(axes, x, y, color, xlabel, ylabel)\n",
+    "that takes an Axes object (as the argument axes), time-series data (as x and y arguments) the name of a color (as a string, provided as the color argument) and x-axis and y-axis labels (as xlabel and ylabel arguments). In this exercise, the function plot_timeseries is already defined and provided to you.\n",
+    "\n",
+    "Use this function to plot the climate_change time-series data, provided as a Pandas DataFrame object that has a DateTimeIndex with the dates of the measurements and co2 and relative_temp columns.\n",
+    "\n",
+    "In the provided ax object, use the function plot_timeseries to plot the \"co2\" column in blue, with the x-axis label \"Time (years)\" and y-axis label \"CO2 levels\".\n",
+    "Use the ax.twinx method to add an Axes object to the figure that shares the x-axis with ax.\n",
+    "Use the function plot_timeseries to add the data in the \"relative_temp\" column in red to the twin Axes object, with the x-axis label \"Time (years)\" and y-axis label \"Relative temperature (Celsius)\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plot the CO2 levels time-series in blue\n",
+    "plot_timeseries(ax, climate_change.index, climate_change['co2'], \"blue\", \"Time (years)\", \"CO2 levels\")\n",
+    "\n",
+    "# Create a twin Axes object that shares the x-axis\n",
+    "ax2 = ax.twinx()\n",
+    "\n",
+    "# Plot the relative temperature data in red\n",
+    "plot_timeseries(ax, climate_change.index, climate_change[\"relative_temp\"], \"red\", \"Time (years)\", \"Relative temperature (Celsius)\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Annotating a plot of time-series data\n",
+    "Annotating a plot allows us to highlight interesting information in the plot. For example, in describing the climate change dataset, we might want to point to the date at which the relative temperature first exceeded 1 degree Celsius.\n",
+    "\n",
+    "For this, we will use the annotate method of the Axes object. In this exercise, you will have the DataFrame called climate_change loaded into memory. Using the Axes methods, plot only the relative temperature column as a function of dates, and annotate the data.\n",
+    "\n",
+    "Use the ax.plot method to plot the DataFrame index against the relative_temp column.\n",
+    "Use the annotate method to add the text '>1 degree' in the location (pd.Timestamp('2015-10-06'), 1)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plot the relative temperature data\n",
+    "ax.plot(climate_change.index,climate_change['relative_temp'],'red')\n",
+    "ax.set_xlabel( 'Time')\n",
+    "ax.set_ylabel('Relative temperature (Celsius)')\n",
+    "\n",
+    "# Annotate the date at which temperatures exceeded 1 degree\n",
+    "ax.annotate('>1 degree',(pd.Timestamp('2015-10-06'), 1))\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting time-series: putting it all together\n",
+    "In this exercise, you will plot two time-series with different scales on the same Axes, and annotate the data from one of these series.\n",
+    "\n",
+    "The CO2/temperatures data is provided as a DataFrame called climate_change. You should also use the function that we have defined before, called plot_timeseries, which takes an Axes object (as the axes argument) plots a time-series (provided as x and y arguments), sets the labels for the x-axis and y-axis and sets the color for the data, and for the y tick/axis labels:\n",
+    "\n",
+    "plot_timeseries(axes, x, y, color, xlabel, ylabel)\n",
+    "Then, you will annotate with text an important time-point in the data: on 2015-10-06, when the temperature first rose to above 1 degree over the average.\n",
+    "\n",
+    "Use the plot_timeseries function to plot CO2 levels against time. Set xlabel to \"Time (years)\" ylabel to \"CO2 levels\" and color to 'blue'.\n",
+    "Create ax2, as a twin of the first Axes.\n",
+    "In ax2, plot temperature against time, setting the color ylabel to \"Relative temp (Celsius)\" and color to 'red'.\n",
+    "Annotate the data using the ax2.annotate method. Place the text \">1 degree\" in x=pd.Timestamp('2008-10-06'), y=-0.2 pointing with a gray thin arrow to x=pd.Timestamp('2015-10-06'), y = 1.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plot the CO2 levels time-series in blue\n",
+    "plot_timeseries(ax, climate_change.index, climate_change['co2'],'blue', 'Time (years)', 'CO2 levels')\n",
+    "\n",
+    "\n",
+    "# Create an Axes object that shares the x-axis\n",
+    "ax2 = ax.twinx()\n",
+    "\n",
+    "# Plot the relative temperature data in red\n",
+    "plot_timeseries(ax2, climate_change.index,climate_change['relative_temp'],'red', 'Time (years)', 'Relative temp (Celsius)')\n",
+    "\n",
+    "# Annotate point with relative temperature >1 degree\n",
+    "ax2.annotate(\">1 degree\"\n",
+    ",xytext=(pd.Timestamp('2008-10-06'),-0.2),xy=(pd.Timestamp('2015-10-06'), 1),arrowprops={\"arrowstyle\":\"->\", \"color\":\"gray\"})\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
