--- a/Intro to Data Visualization with matplotlib/Quantitative comparisons and statistical visualizations.ipynb
+++ b/Intro to Data Visualization with matplotlib/Quantitative comparisons and statistical visualizations.ipynb
@@ -147,6 +147,179 @@
     "ax.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding error-bars to a bar chart\n",
+    "Statistical plotting techniques add quantitative information for comparisons into the visualization. For example, in this exercise, we will add error bars that quantify not only the difference in the means of the height of medalists in the 2016 Olympic Games, but also the standard deviation of each of these groups, as a way to assess whether the difference is substantial relative to the variability within each group.\n",
+    "\n",
+    "For the purpose of this exercise, you will have two DataFrames: mens_rowing holds data about the medalists in the rowing events and mens_gymnastics will hold information about the medalists in the gymnastics events.\n",
+    "\n",
+    "Add a bar with size equal to the mean of the \"Height\" column in the mens_rowing DataFrame and an error-bar of its standard deviation.\n",
+    "Add another bar for the mean of the \"Height\" column in mens_gymnastics with an error-bar of its standard deviation.\n",
+    "Add a label to the the y-axis: \"Height (cm)\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Add a bar for the rowing \"Height\" column mean/std\n",
+    "ax.bar(\"Rowing\",mens_rowing[\"Height\"].mean(),yerr=mens_rowing[\"Height\"].std())\n",
+    "\n",
+    "\n",
+    "# Add a bar for the gymnastics \"Height\" column mean/std\n",
+    "ax.bar(\"Gymnastics\",mens_gymnastics[\"Height\"].mean(),yerr=mens_gymnastics[\"Height\"].std())\n",
+    "\n",
+    "# Label the y-axis\n",
+    "ax.set_ylabel(\"Height (cm)\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding error-bars to a plot\n",
+    "Adding error-bars to a plot is done by using the errorbars method of the Axes object.\n",
+    "\n",
+    "Here, you have two DataFrames loaded: seattle_weather has data about the weather in Seattle and austin_weather has data about the weather in Austin. Each DataFrame has a column \"MONTH\" that has the names of the months, a column \"MLY-TAVG-NORMAL\" that has the average temperature in each month and a column \"MLY-TAVG-STDDEV\" that has the standard deviation of the temperatures across years.\n",
+    "\n",
+    "In the exercise, you will plot the mean temperature across months and add the standard deviation at each point as y errorbars.\n",
+    "\n",
+    "Use the ax.errorbar method to add the Seattle data: the \"MONTH\" column as x values, the \"MLY-TAVG-NORMAL\" as y values and \"MLY-TAVG-STDDEV\" as yerr values.\n",
+    "Add the Austin data: the \"MONTH\" column as x values, the \"MLY-TAVG-NORMAL\" as y values and \"MLY-TAVG-STDDEV\" as yerr values.\n",
+    "Set the y-axis label as \"Temperature (Fahrenheit)\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Add Seattle temperature data in each month with error bars\n",
+    "ax.errorbar(seattle_weather[\"MONTH\"],seattle_weather[\"MLY-TAVG-NORMAL\"],yerr=seattle_weather[\"MLY-TAVG-STDDEV\"])\n",
+    "\n",
+    "# Add Austin temperature data in each month with error bars\n",
+    "ax.errorbar(austin_weather[\"MONTH\"],austin_weather[\"MLY-TAVG-NORMAL\"],yerr=austin_weather[\"MLY-TAVG-STDDEV\"])\n",
+    "\n",
+    "# Set the y-axis label\n",
+    "ax.set_ylabel(\"Temperature (Fahrenheit)\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating boxplots\n",
+    "Boxplots provide additional information about the distribution of the data that they represent. They tell us what the median of the distribution is, what the inter-quartile range is and also what the expected range of approximately 99% of the data should be. Outliers beyond this range are particularly highlighted.\n",
+    "\n",
+    "In this exercise, you will use the data about medalist heights that you previously visualized as histograms, and as bar charts with error bars, and you will visualize it as boxplots.\n",
+    "\n",
+    "Again, you will have the mens_rowing and mens_gymnastics DataFrames available to you, and both of these DataFrames have columns called \"Height\" that you will compare.\n",
+    "\n",
+    "Create a boxplot that contains the \"Height\" column for mens_rowing on the left and mens_gymnastics on the right.\n",
+    "Add x-axis tick labels: \"Rowing\" and \"Gymnastics\".\n",
+    "Add a y-axis label: \"Height (cm)\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Add a boxplot for the \"Height\" column in the DataFrames\n",
+    "ax.boxplot([mens_rowing[\"Height\"],mens_gymnastics[\"Height\"]])\n",
+    "\n",
+    "# Add x-axis tick labels:\n",
+    "ax.set_xticklabels([\"Rowing\",\"Gymnastics\"])\n",
+    "\n",
+    "# Add a y-axis label\n",
+    "ax.set_ylabel(\"Height (cm)\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simple scatter plot\n",
+    "Scatter are a bi-variate visualization technique. They plot each record in the data as a point. The location of each point is determined by the value of two variables: the first variable determines the distance along the x-axis and the second variable determines the height along the y-axis.\n",
+    "\n",
+    "In this exercise, you will create a scatter plot of the climate_change data. This DataFrame, which is already loaded, has a column \"co2\" that indicates the measurements of carbon dioxide every month and another column, \"relative_temp\" that indicates the temperature measured at the same time.\n",
+    "\n",
+    "Using the ax.scatter method, add the data to the plot: \"co2\" on the x-axis and \"relative_temp\" on the y-axis.\n",
+    "Set the x-axis label to \"CO2 (ppm)\".\n",
+    "Set the y-axis label to \"Relative temperature (C)\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Add data: \"co2\" on x-axis, \"relative_temp\" on y-axis\n",
+    "ax.scatter(climate_change[\"co2\"],climate_change[\"relative_temp\"])\n",
+    "\n",
+    "# Set the x-axis label to \"CO2 (ppm)\"\n",
+    "ax.set_xlabel(\"CO2 (ppm)\")\n",
+    "\n",
+    "# Set the y-axis label to \"Relative temperature (C)\"\n",
+    "ax.set_ylabel(\"Relative temperature (C)\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoding time by color\n",
+    "The screen only has two dimensions, but we can encode another dimension in the scatter plot using color. Here, we will visualize the climate_change dataset, plotting a scatter plot of the \"co2\" column, on the x-axis, against the \"relative_temp\" column, on the y-axis. We will encode time using the color dimension, with earlier times appearing as darker shades of blue and later times appearing as brighter shades of yellow.\n",
+    "\n",
+    "Using the ax.scatter method add a scatter plot of the \"co2\" column (x-axis) against the \"relative_temp\" column.\n",
+    "Use the c key-word argument to pass in the index of the DataFrame as input to color each point according to its date.\n",
+    "Set the x-axis label to \"CO2 (ppm)\" and the y-axis label to \"Relative temperature (C)\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Add data: \"co2\", \"relative_temp\" as x-y, index as color\n",
+    "ax.scatter(climate_change[\"co2\"],climate_change[\"relative_temp\"], c=climate_change.index )\n",
+    "\n",
+    "# Set the x-axis label to \"CO2 (ppm)\"\n",
+    "ax.set_xlabel(\"CO2 (ppm)\")\n",
+    "\n",
+    "# Set the y-axis label to \"Relative temperature (C)\"\n",
+    "ax.set_ylabel(\"Relative temperature (C)\")\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
