Visualizing Two Quantitative Variables

--- a/Introduction to Data Visualization with Seaborn/Introduction to Seaborn.ipynb
+++ b/Introduction to Data Visualization with Seaborn/Introduction to Seaborn.ipynb
@@ -183,7 +183,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import Matplotlib and Seaborn\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Create a dictionary mapping subgroup values to colors\n",
+    "palette_colors = {\"Rural\": \"green\", \"Urban\": \"blue\"}\n",
+    "\n",
+    "# Create a count plot of school with location subgroups\n",
+    "sns.countplot(x=\"school\",data =student_data,hue=\"location\",palette=palette_colors)\n",
+    "\n",
+    "# Display plot\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
