Visualizing a Categorical and a Quantitative Variable

--- a/Introduction to Data Visualization with Seaborn/Visualizing Two Quantitative Variables.ipynb
+++ b/Introduction to Data Visualization with Seaborn/Visualizing Two Quantitative Variables.ipynb
@@ -212,8 +212,8 @@
     "\n",
     "1. Use relplot() and the mpg DataFrame to create a line plot with \"model_year\" on the x-axis and \"horsepower\" on the y-axis. Turn off the confidence intervals on the plot.\n",
     "2. Create different lines for each country of origin (\"origin\") that vary in both line style and color.\n",
-    "Add markers for each data point to the lines.\n",
-    "Use the dashes parameter to use solid lines for all countries, while still allowing for different marker styles for each line."
+    "3. Add markers for each data point to the lines.\n",
+    "4. Use the dashes parameter to use solid lines for all countries, while still allowing for different marker styles for each line."
    ]
   },
   {
@@ -221,7 +221,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import Matplotlib and Seaborn\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Add markers and make each line have the same style\n",
+    "sns.relplot(x=\"model_year\", y=\"horsepower\", \n",
+    "            data=mpg, kind=\"line\", \n",
+    "            ci=None, style=\"origin\", \n",
+    "            hue=\"origin\",markers=True,\n",
+    "dashes=False)\n",
+    "\n",
+    "# Show plot\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
