--- a/Python Data Science Toolbox (Part 1)/Default arguments, variable-length arguments and scope.ipynb
+++ b/Python Data Science Toolbox (Part 1)/Default arguments, variable-length arguments and scope.ipynb
@@ -170,32 +170,305 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Functions with one default argument\n",
+    "In the previous chapter, you've learned to define functions with more than one parameter and then calling those functions by passing the required number of arguments. In the last video, Hugo built on this idea by showing you how to define functions with default arguments. You will practice that skill in this exercise by writing a function that uses a default argument and then calling the function a couple of times.\n",
+    "\n",
+    "1. Complete the function header with the function name shout_echo. It accepts an argument word1 and a default argument echo with default value 1, in that order.\n",
+    "2. Use the * operator to concatenate echo copies of word1. Assign the result to echo_word.\n",
+    "3. Call shout_echo() with just the string, \"Hey\". Assign the result to no_echo.\n",
+    "4. Call shout_echo() with the string \"Hey\" and the value 5 for the default argument, echo. Assign the result to with_echo."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define shout_echo\n",
+    "def shout_echo(word1, echo = 1):\n",
+    "    \"\"\"Concatenate echo copies of word1 and three\n",
+    "     exclamation marks at the end of the string.\"\"\"\n",
+    "\n",
+    "    # Concatenate echo copies of word1 using *: echo_word\n",
+    "    echo_word = word1 * echo\n",
+    "\n",
+    "    # Concatenate '!!!' to echo_word: shout_word\n",
+    "    shout_word = echo_word + '!!!'\n",
+    "\n",
+    "    # Return shout_word\n",
+    "    return shout_word\n",
+    "\n",
+    "# Call shout_echo() with \"Hey\": no_echo\n",
+    "no_echo = shout_echo(\"Hey\")\n",
+    "\n",
+    "# Call shout_echo() with \"Hey\" and echo=5: with_echo\n",
+    "with_echo = shout_echo(\"Hey\",echo=5)\n",
+    "\n",
+    "# Print no_echo and with_echo\n",
+    "print(no_echo)\n",
+    "print(with_echo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions with multiple default arguments\n",
+    "You've now defined a function that uses a default argument - don't stop there just yet! You will now try your hand at defining a function with more than one default argument and then calling this function in various ways.\n",
+    "\n",
+    "After defining the function, you will call it by supplying values to all the default arguments of the function. Additionally, you will call the function by not passing a value to one of the default arguments - see how that changes the output of your function!\n",
+    "\n",
+    "1. Complete the function header with the function name shout_echo. It accepts an argument word1, a default argument echo with default value 1 and a default argument intense with default value False, in that order.\n",
+    "2. In the body of the if statement, make the string object echo_word upper case by applying the method .upper() on it.\n",
+    "3. Call shout_echo() with the string, \"Hey\", the value 5 for echo and the value True for intense. Assign the result to with_big_echo.\n",
+    "4. Call shout_echo() with the string \"Hey\" and the value True for intense. Assign the result to big_no_echo."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define shout_echo\n",
+    "def shout_echo(word1, echo = 1, intense = False):\n",
+    "    \"\"\"Concatenate echo copies of word1 and three\n",
+    "    exclamation marks at the end of the string.\"\"\"\n",
+    "\n",
+    "    # Concatenate echo copies of word1 using *: echo_word\n",
+    "    echo_word = word1 * echo\n",
+    "\n",
+    "    # Make echo_word uppercase if intense is True\n",
+    "    if intense is True:\n",
+    "        # Make uppercase and concatenate '!!!': echo_word_new\n",
+    "        echo_word_new = echo_word.upper() + '!!!'\n",
+    "    else:\n",
+    "        # Concatenate '!!!' to echo_word: echo_word_new\n",
+    "        echo_word_new = echo_word + '!!!'\n",
+    "\n",
+    "    # Return echo_word_new\n",
+    "    return echo_word_new\n",
+    "\n",
+    "# Call shout_echo() with \"Hey\", echo=5 and intense=True: with_big_echo\n",
+    "with_big_echo = shout_echo(\"Hey\",echo= 5 ,intense=True)\n",
+    "\n",
+    "# Call shout_echo() with \"Hey\" and intense=True: big_no_echo\n",
+    "big_no_echo = shout_echo(\"Hey\",intense=True)\n",
+    "\n",
+    "# Print values\n",
+    "print(with_big_echo)\n",
+    "print(big_no_echo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions with variable-length arguments (*args)\n",
+    "Flexible arguments enable you to pass a variable number of arguments to a function. In this exercise, you will practice defining a function that accepts a variable number of string arguments.\n",
+    "\n",
+    "The function you will define is gibberish() which can accept a variable number of string values. Its return value is a single string composed of all the string arguments concatenated together in the order they were passed to the function call. You will call the function with a single string argument and see how the output changes with another call using more than one string argument. Recall from the previous video that, within the function definition, args is a tuple.\n",
+    "\n",
+    "1. Complete the function header with the function name gibberish. It accepts a single flexible argument *args.\n",
+    "2. Initialize a variable hodgepodge to an empty string.\n",
+    "3. Return the variable hodgepodge at the end of the function body.\n",
+    "4. Call gibberish() with the single string, \"luke\". Assign the result to one_word.\n",
+    "5. Hit the Submit button to call gibberish() with multiple arguments and to print the value to the Shell."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define gibberish\n",
+    "def gibberish(*args):\n",
+    "    \"\"\"Concatenate strings in *args together.\"\"\"\n",
+    "\n",
+    "    # Initialize an empty string: hodgepodge\n",
+    "    hodgepodge = \"\"\n",
+    "\n",
+    "    # Concatenate the strings in args\n",
+    "    for word in args:\n",
+    "        hodgepodge += word\n",
+    "\n",
+    "    # Return hodgepodge\n",
+    "    return hodgepodge\n",
+    "\n",
+    "# Call gibberish() with one string: one_word\n",
+    "one_word = gibberish(\"luke\")\n",
+    "\n",
+    "# Call gibberish() with five strings: many_words\n",
+    "many_words = gibberish(\"luke\", \"leia\", \"han\", \"obi\", \"darth\")\n",
+    "\n",
+    "# Print one_word and many_words\n",
+    "print(one_word)\n",
+    "print(many_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions with variable-length keyword arguments (**kwargs)\n",
+    "Let's push further on what you've learned about flexible arguments - you've used *args, you're now going to use **kwargs! What makes **kwargs different is that it allows you to pass a variable number of keyword arguments to functions. Recall from the previous video that, within the function definition, kwargs is a dictionary.\n",
+    "\n",
+    "To understand this idea better, you're going to use **kwargs in this exercise to define a function that accepts a variable number of keyword arguments. The function simulates a simple status report system that prints out the status of a character in a movie.\n",
+    "\n",
+    "1. Complete the function header with the function name report_status. It accepts a single flexible argument **kwargs.\n",
+    "2. Iterate over the key-value pairs of kwargs to print out the keys and values, separated by a colon ':'.\n",
+    "3. In the first call to report_status(), pass the following keyword-value pairs: name=\"luke\", affiliation=\"jedi\" and status=\"missing\".\n",
+    "4. In the second call to report_status(), pass the following keyword-value pairs: name=\"anakin\", affiliation=\"sith lord\" and status=\"deceased\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define report_status\n",
+    "def report_status(**kwargs):\n",
+    "    \"\"\"Print out the status of a movie character.\"\"\"\n",
+    "\n",
+    "    print(\"\\nBEGIN: REPORT\\n\")\n",
+    "\n",
+    "    # Iterate over the key-value pairs of kwargs\n",
+    "    for key, value in kwargs.items():\n",
+    "        # Print out the keys and values, separated by a colon ':'\n",
+    "        print(key + \": \" + value)\n",
+    "\n",
+    "    print(\"\\nEND REPORT\")\n",
+    "\n",
+    "# First call to report_status()\n",
+    "report_status(name=\"luke\", affiliation=\"jedi\",status=\"missing\")\n",
+    "\n",
+    "# Second call to report_status()\n",
+    "report_status(name=\"anakin\", affiliation=\"sith lord\", status=\"deceased\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bringing it all together (1)\n",
+    "Recall the Bringing it all together exercise in the previous chapter where you did a simple Twitter analysis by developing a function that counts how many tweets are in certain languages. The output of your function was a dictionary that had the language as the keys and the counts of tweets in that language as the value.\n",
+    "\n",
+    "In this exercise, we will generalize the Twitter language analysis that you did in the previous chapter. You will do that by including a default argument that takes a column name.\n",
+    "\n",
+    "For your convenience, pandas has been imported as pd and the 'tweets.csv' file has been imported into the DataFrame tweets_df. Parts of the code from your previous work are also provided.\n",
+    "\n",
+    "1. Complete the function header by supplying the parameter for a DataFrame df and the parameter col_name with a default value of 'lang' for the DataFrame column name.\n",
+    "2. Call count_entries() by passing the tweets_df DataFrame and the column name 'lang'. Assign the result to result1. Note that since 'lang' is the default value of the col_name parameter, you don't have to specify it here.\n",
+    "3. Call count_entries() by passing the tweets_df DataFrame and the column name 'source'. Assign the result to result2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define count_entries()\n",
+    "def count_entries(df, col_name = 'lang'):\n",
+    "    \"\"\"Return a dictionary with counts of\n",
+    "    occurrences as value for each key.\"\"\"\n",
+    "\n",
+    "    # Initialize an empty dictionary: cols_count\n",
+    "    cols_count = {}\n",
+    "\n",
+    "    # Extract column from DataFrame: col\n",
+    "    col = df[col_name]\n",
+    "    \n",
+    "    # Iterate over the column in DataFrame\n",
+    "    for entry in col:\n",
+    "\n",
+    "        # If entry is in cols_count, add 1\n",
+    "        if entry in cols_count.keys():\n",
+    "            cols_count[entry] += 1\n",
+    "\n",
+    "        # Else add the entry to cols_count, set the value to 1\n",
+    "        else:\n",
+    "            cols_count[entry] = 1\n",
+    "\n",
+    "    # Return the cols_count dictionary\n",
+    "    return cols_count\n",
+    "\n",
+    "# Call count_entries(): result1\n",
+    "result1 = count_entries(tweets_df)\n",
+    "\n",
+    "# Call count_entries(): result2\n",
+    "result2 = count_entries(tweets_df, col_name = 'source')\n",
+    "\n",
+    "# Print result1 and result2\n",
+    "print(result1)\n",
+    "print(result2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bringing it all together (2)\n",
+    "Wow, you've just generalized your Twitter language analysis that you did in the previous chapter to include a default argument for the column name. You're now going to generalize this function one step further by allowing the user to pass it a flexible argument, that is, in this case, as many column names as the user would like!\n",
+    "\n",
+    "Once again, for your convenience, pandas has been imported as pd and the 'tweets.csv' file has been imported into the DataFrame tweets_df. Parts of the code from your previous work are also provided.\n",
+    "\n",
+    "1. Complete the function header by supplying the parameter for the dataframe df and the flexible argument *args.\n",
+    "2. Complete the for loop within the function definition so that the loop occurs over the tuple args.\n",
+    "3. Call count_entries() by passing the tweets_df DataFrame and the column name 'lang'. Assign the result to result1.\n",
+    "4. Call count_entries() by passing the tweets_df DataFrame and the column names 'lang' and 'source'. Assign the result to result2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define count_entries()\n",
+    "def count_entries(df, *args):\n",
+    "    \"\"\"Return a dictionary with counts of\n",
+    "    occurrences as value for each key.\"\"\"\n",
+    "    \n",
+    "    #Initialize an empty dictionary: cols_count\n",
+    "    cols_count = {}\n",
+    "    \n",
+    "    # Iterate over column names in args\n",
+    "    for col_name in args:\n",
+    "    \n",
+    "        # Extract column from DataFrame: col\n",
+    "        col = df[col_name]\n",
+    "    \n",
+    "        # Iterate over the column in DataFrame\n",
+    "        for entry in col:\n",
+    "    \n",
+    "            # If entry is in cols_count, add 1\n",
+    "            if entry in cols_count.keys():\n",
+    "                cols_count[entry] += 1\n",
+    "    \n",
+    "            # Else add the entry to cols_count, set the value to 1\n",
+    "            else:\n",
+    "                cols_count[entry] = 1\n",
+    "\n",
+    "    # Return the cols_count dictionary\n",
+    "    return cols_count\n",
+    "\n",
+    "# Call count_entries(): result1\n",
+    "result1 = count_entries(tweets_df,'lang')\n",
+    "\n",
+    "# Call count_entries(): result2\n",
+    "result2 = count_entries(tweets_df, 'lang', 'source')\n",
+    "\n",
+    "# Print result1 and result2\n",
+    "print(result1)\n",
+    "print(result2)"
+   ]
   }
  ],
  "metadata": {
