Additional Plot Types 02

--- a/Intermediate Data Visualization with Seaborn/Additional Plot Types.ipynb
+++ b/Intermediate Data Visualization with Seaborn/Additional Plot Types.ipynb
@@ -138,39 +138,214 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Regression and residual plots\n",
+    "Linear regression is a useful tool for understanding the relationship between numerical variables. Seaborn has simple but powerful tools for examining these relationships.\n",
+    "\n",
+    "For these exercises, we will look at some details from the US Department of Education on 4 year college tuition information and see if there are any interesting insights into which variables might help predict tuition costs.\n",
+    "\n",
+    "For these exercises, all data is loaded in the df variable.\n",
+    "\n",
+    "1. Plot a regression plot comparing Tuition and average SAT scores(SAT_AVG_ALL).\n",
+    "   Make sure the values are shown as green triangles.\n",
+    "2. Use a residual plot to determine if the relationship looks linear.\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Display a regression plot for Tuition\n",
+    "sns.regplot(data=df,\n",
+    "         y='Tuition',\n",
+    "         x=\"SAT_AVG_ALL\",\n",
+    "         marker='^',\n",
+    "         color='g')\n",
+    "\n",
+    "plt.show()\n",
+    "plt.clf()\n",
+    "#######################################\n",
+    "\n",
+    "# Display the residual plot\n",
+    "sns.residplot(data=df,\n",
+    "          y='Tuition',\n",
+    "          x=\"SAT_AVG_ALL\",\n",
+    "          color='g')\n",
+    "\n",
+    "plt.show()\n",
+    "plt.clf()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regression plot parameters\n",
+    "Seaborn's regression plot supports several parameters that can be used to configure the plots and drive more insight into the data.\n",
+    "\n",
+    "For the next exercise, we can look at the relationship between tuition and the percent of students that receive Pell grants. A Pell grant is based on student financial need and subsidized by the US Government. In this data set, each University has some percentage of students that receive these grants. Since this data is continuous, using x_bins can be useful to break the percentages into categories in order to summarize and understand the data.\n",
+    "\n",
+    "1. Plot a regression plot of Tuition and PCTPELL.\n",
+    "2. Create another plot that breaks the PCTPELL column into 5 different bins.\n",
+    "3. Create a final regression plot that includes a 2nd order polynomial regression line.\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Plot a regression plot of Tuition and the Percentage of Pell Grants\n",
+    "sns.regplot(data=df,\n",
+    "            y='Tuition',\n",
+    "            x=\"PCTPELL\")\n",
+    "\n",
+    "plt.show()\n",
+    "plt.clf()\n",
+    "#########################################################\n",
+    "\n",
+    "# Create another plot that estimates the tuition by PCTPELL\n",
+    "sns.regplot(data=df,\n",
+    "            y='Tuition',\n",
+    "            x=\"PCTPELL\",\n",
+    "            x_bins=5)\n",
+    "\n",
+    "plt.show()\n",
+    "plt.clf()\n",
+    "#########################################################\n",
+    "\n",
+    "# The final plot should include a line using a 2nd order polynomial\n",
+    "sns.regplot(data=df,\n",
+    "            y='Tuition',\n",
+    "            x=\"PCTPELL\",\n",
+    "            x_bins=5,\n",
+    "            order=2)\n",
+    "\n",
+    "plt.show()\n",
+    "plt.clf()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Binning data\n",
+    "When the data on the x axis is a continuous value, it can be useful to break it into different bins in order to get a better visualization of the changes in the data.\n",
+    "\n",
+    "For this exercise, we will look at the relationship between tuition and the Undergraduate population abbreviated as UG in this data. We will start by looking at a scatter plot of the data and examining the impact of different bin sizes on the visualization.\n",
+    "\n",
+    "1. Create a regplot of Tuition and UG and set the fit_reg parameter to False to disable the regression line.\n",
+    "2. Create another plot with the UG data divided into 5 bins.\n",
+    "3. Create a regplot() with the data divided into 8 bins."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a scatter plot by disabling the regression line\n",
+    "sns.regplot(data=df,\n",
+    "            y='Tuition',\n",
+    "            x=\"UG\",\n",
+    "            fit_reg=False)\n",
+    "\n",
+    "plt.show()\n",
+    "plt.clf()\n",
+    "############################################################\n",
+    "\n",
+    "# Create a scatter plot and bin the data into 5 bins\n",
+    "sns.regplot(data=df,\n",
+    "            y='Tuition',\n",
+    "            x=\"UG\",\n",
+    "            x_bins=5)\n",
+    "\n",
+    "plt.show()\n",
+    "plt.clf()\n",
+    "############################################################\n",
+    "\n",
+    "# Create a regplot and bin the data into 8 bins\n",
+    "sns.regplot(data=df,\n",
+    "         y='Tuition',\n",
+    "         x=\"UG\",\n",
+    "         x_bins=8)\n",
+    "\n",
+    "plt.show()\n",
+    "plt.clf()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating heatmaps\n",
+    "A heatmap is a common matrix plot that can be used to graphically summarize the relationship between two variables. For this exercise, we will start by looking at guests of the Daily Show from 1999 - 2015 and see how the occupations of the guests have changed over time.\n",
+    "\n",
+    "The data includes the date of each guest appearance as well as their occupation. For the first exercise, we need to get the data into the right format for Seaborn's heatmap function to correctly plot the data. All of the data has already been read into the df variable.\n",
+    "\n",
+    "1. Use pandas' crosstab() function to build a table of visits by Group and Year.\n",
+    "2. Print the pd_crosstab DataFrame.\n",
+    "3. Plot the data using Seaborn's heatmap()."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a crosstab table of the data\n",
+    "pd_crosstab = pd.crosstab(df[\"Group\"], df[\"YEAR\"])\n",
+    "print(pd_crosstab)\n",
+    "\n",
+    "# Plot a heatmap of the table\n",
+    "sns.heatmap(pd_crosstab)\n",
+    "\n",
+    "# Rotate tick marks for visibility\n",
+    "plt.yticks(rotation=0)\n",
+    "plt.xticks(rotation=90)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Customizing heatmaps\n",
+    "Seaborn supports several types of additional customizations to improve the output of a heatmap. For this exercise, we will continue to use the Daily Show data that is stored in the df variable but we will customize the output.\n",
+    "\n",
+    "1. Create a crosstab table of Group and YEAR\n",
+    "2. Create a heatmap of the data using the BuGn palette\n",
+    "3. Disable the cbar and increase the linewidth to 0.3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the crosstab DataFrame\n",
+    "pd_crosstab = pd.crosstab(df[\"Group\"], df[\"YEAR\"])\n",
+    "\n",
+    "# Plot a heatmap of the table with no color bar and using the BuGn palette\n",
+    "sns.heatmap(pd_crosstab, cbar=False, cmap=\"BuGn\", linewidths=0.3)\n",
+    "\n",
+    "# Rotate tick marks for visibility\n",
+    "plt.yticks(rotation=0)\n",
+    "plt.xticks(rotation=90)\n",
+    "\n",
+    "#Show the plot\n",
+    "plt.show()\n",
+    "plt.clf()"
+   ]
   }
  ],
  "metadata": {
